--- a/Fake News/Fake_news_detection.ipynb
+++ b/Fake News/Fake_news_detection.ipynb
@@ -319,10 +319,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_fake_manual_testing = df_fake.tail(10)\n",
+    "df.loc_fake_manual_testing = df_fake.tail(10)\n",
     "for i in range(23480,23470,-1):\n",
     "    df_fake.drop([i], axis = 0, inplace = True)\n",
-    "df_true_manual_testing = df_true.tail(10)\n",
+    "df.loc_true_manual_testing = df_true.tail(10)\n",
     "for i in range(21416,21406,-1):\n",
     "    df_true.drop([i], axis = 0, inplace = True)"
    ]
